revise config files for tex, matlab, java and scim

--- a/etc/fonts/local.conf
+++ b/etc/fonts/local.conf
@@ -2,6 +2,8 @@
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <!-- /etc/fonts/local.conf is the global font configuration file -->
 <fontconfig>
+	<dir>/usr/share/texmf-dist/fonts/opentype</dir>
+	<dir>/usr/share/texmf-dist/fonts/truetype</dir>
 	<match target="font">
 		<edit name="antialias" mode="assign">
 			<bool>true</bool>
